# equalizador

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts
app/src/androidTest/java/com/grupo11/equalizador/: ExampleInstrumentedTest.kt  InstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Biquad.cpp  Biquad.h  CMakeLists.txt  ThreeBandFilter.cpp  ThreeBandFilter.h  jni_wrapper.cpp  native-lib.cpp
app/src/main/java/com/grupo11/audioservice/: AudioService.kt  MainActivity.kt
app/src/main/java/com/grupo11/equalizador/: AudioAdapter.kt  AudioService.kt  EqualizerApplication.kt  MainActivity.kt  NativeThreeBand.kt
app/src/main/java/com/grupo11/equalizador/data/: AudioTrack.kt
app/src/main/java/com/grupo11/equalizador/service/: AudioService.kt  WavResPlayer.kt
app/src/main/java/com/grupo11/equalizador/ui/: AudioAdapter.kt
app/src/main/java/com/grupo11/equalizador/utils/: EqualizerConstants.kt
app/src/main/res/layout/: activity_main.xml  item_audio.xml
app/src/main/res/mipmap-anydpi-v26/: ic_equa_round.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/grupo11/audioservice/: ExampleUnitTest.kt
app/src/test/java/com/grupo11/equalizador/: ExampleUnitTest.kt
app/src/test/java/com/grupo11/equalizador/service/: AudioServiceTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
